--- a/1.html
+++ b/1.html
@@ -21,6 +21,9 @@
         <input type="button" onclick="register" value="Register" style="width: 100px;" class="reg_bt">
         <label for="OTP">OTP</label>
         <input type="text" name="OTP" id="OTP">
+        <input type="button" value="Login">
+        <input type="checkbox" name="male" id="ml">
+        <input type="checkbox" name="female" id="fl">
         
     </div>
         <script src="1.js"></script>
