add color to login button

--- a/1.html
+++ b/1.html
@@ -5,6 +5,10 @@
                 background-color: blue;
 
             }
+
+            .lgb{
+                background-color: red;
+            }
         </style>
     </head>
 
@@ -21,7 +25,7 @@
         <input type="button" onclick="register" value="Register" style="width: 100px;" class="reg_bt">
         <label for="OTP">OTP</label>
         <input type="text" name="OTP" id="OTP">
-        <input type="button" value="Login">
+        <input type="button" value="Login" class="lgb">
         <input type="checkbox" name="male" id="ml">
         <input type="checkbox" name="female" id="fl">
         
