--- a/1.html
+++ b/1.html
@@ -7,7 +7,7 @@
             }
 
             .lgb{
-                background-color: red;
+                background-color: green;
             }
         </style>
     </head>
